src/pages/es/v1.19.0/deployment/openreplay-admin.mdx
---
title: "Administración de OpenReplay"
metaTitle: "Administración de OpenReplay"
metaDescription: "Cómo administrar y gestionar fácilmente tu instancia de OpenReplay."
layout: ~/layouts/MainLayout.astro
i18nReady: true
---

## CLI

La CLI es útil para gestionar aspectos básicos de tu instancia de OpenReplay, cosas como reiniciar o reinstalar un servicio, acceder a los registros de un componente o simplemente comprobar el estado de tus servicios de backend.

Ejecuta la CLI con la opción `-h`:

```bash
openreplay -h
```

Y verás la lista de todas las opciones disponibles:

```shellsession
  ___                   ____            _
 / _ \ _ __   ___ _ __ |  _ \ ___ _ __ | | __ _ _   _
| | | | '_ \ / _ \ '_ \| |_) / _ \ '_ \| |/ _` | | | |
| |_| | |_) |  __/ | | |  _ <  __/ |_) | | (_| | |_| |
 \___/| .__/ \___|_| |_|_| \_\___| .__/|_|\__,_|\__, |
      |_|                        |_|            |___/

[INFO]
  Usage: openreplay [ -h | --help ]
                    [ -s | --status ]
                    [ -i | --install DOMAIN_NAME ]
                    [ -u | --upgrade ]
                    [ -U | --deprecated-upgrade /path/to/old_vars.yaml]
                    [ -r | --restart ]
                    [ -R | --Reload ]
                    [ -c | --cleanup N (in days) ]
                    [ -e | --edit ]
                    [ -p | --install-packages ]
                    [ -l | --logs SERVICE ]
         Services: alerts assets assist chalice
                   db ender frontend heuristics
                   http integrations nginx-controller
                   peers sink sourcemapreader storage
```

El backend de OpenReplay se apoya en los siguientes componentes/servicios:

| Servicio | Descripción |
|---------|-------------|
| http | Ingiere eventos y grabaciones de sesiones |
| sink | Lee datos de la canalización de streaming (Redis o Kafka para la edición enterprise) e inserta en un almacenamiento temporal (NFS) |
| storage | Mueve los archivos temporales de grabación de sesiones al servicio de almacenamiento de objetos |
| assets | Para almacenar en caché los recursos (CSS, fuentes e iconos) y renderizar correctamente las grabaciones |
| db | Lee y escribe en varias bases de datos (Postgres + ClickHouse para la edición enterprise) |
| ender | Finaliza las sesiones de usuario si están inactivas o desconectadas |
| chalice | API para servir el frontend |
| alerts | Envía notificaciones (correo electrónico, slack, en la aplicación, webhook) cuando se alcanza un umbral establecido por el usuario en cualquiera de las métricas de rendimiento |
| integrations |  Envía y extrae datos de las APIs de terceros compatibles (Sentry, Elastic, GitHub, Jira, etc.) |

## Comandos útiles

- Comprobar el estado de salud de OpenReplay

```sh
openreplay -s
```

- Comprobar los registros de los servicios

```sh
openreplay -l <service name>
```

## Aumentar la capacidad de un servicio

Es posible aumentar la capacidad de cualquier servicio sobrescribiendo los valores predeterminados de asignación de cpu/memoria. Estos últimos se determinan durante el proceso de instalación en función de la capacidad de tu instancia y deberían adaptarse a las necesidades de la mayoría de las instalaciones.

 Si tienes un gran volumen y una máquina potente, simplemente ejecuta el archivo `openreplay -e` y sobrescribe los recursos del servicio. En el ejemplo siguiente, lo hacemos para el worker `http`. Pero esto puede hacerse para cualquier servicio (es decir, sink, storage, postgresql, redis, etc.) descomentando y actualizando el bloque siguiente. Si tienes que hacerlo para más de un servicio, simplemente copia y renombra/actualiza el mismo bloque (cuidado con las duplicaciones).

```yaml
http:
  resources:
    limits:
      cpu: 4096m
      memory: 8192Mi
    requests:
      cpu: 1024m
      memory: 2056Mi
```

Finalmente, reinstala el servicio para que los nuevos límites surtan efecto (no perderás tus datos):

```bash
openreplay -R
```

## Desinstalar OpenReplay

Ejecuta los siguientes comandos para desinstalar OpenReplay:

```bash
sudo k3s-uninstall.sh
```

Toda la configuración se almacena en `/var/lib/openreplay/`.

```
sudo rm -rf /var/lib/openreplay/openreplay
```
